--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -88,5 +88,17 @@
       // margin-top: 2rem;
       // margin-right: auto;
     }
+    &__policy {
+      flex-wrap: wrap;
+      justify-content: flex-start;
+    }
+
+    &__terms {
+      padding-left: 1rem;
+      margin-bottom: 1rem;
+    }
+    &__privacy {
+      padding-left: 1rem;
+    }
   }
 }
