--- a/sass/banner.scss
+++ b/sass/banner.scss
@@ -8,31 +8,71 @@
     position: relative;
     max-width: 87rem;
     width: 100%;
-    height: 100%;
+    height: 40rem;
     margin: 0;
+    display: flex;
+    overflow: hidden;
+    margin-bottom: 2rem;
     // text-align: center;
   }
 
+  &__dots-box {
+    position: absolute;
+    bottom: 3rem;
+    left: 50%;
+    transform: translateX(-50%);
+    display: flex;
+  }
+
+  &__dot {
+    border: none;
+    background-color: #b9b9b9;
+    opacity: 0.7;
+    height: 1rem;
+    width: 1rem;
+    border-radius: 50%;
+    margin-right: 1.75rem;
+    cursor: pointer;
+    transition: all 0.5s;
+
+    &--active {
+      background-color: #fff;
+      opacity: 1;
+    }
+  }
   &__slide {
+    position: absolute;
+    top: 0;
     width: 100%;
+    height: 100%;
+    transition: transform 1s;
   }
   &__slide-img {
     width: 100%;
+    height: 100%;
+    object-fit: cover;
   }
 
-  &__slider-btn {
+  &__slide-btn {
     position: absolute;
     top: 50%;
+    width: 1.5rem;
+    height: 3rem;
     border: none;
     background-color: transparent;
     transform: translateY(-50%);
     z-index: 5;
 
     &--next {
-      right: 10px;
+      outline: none;
+      right: 15px;
+      background-image: url(../img/arrow-right.svg);
     }
     &--prev {
-      left: 10px;
+      outline: none;
+
+      left: 15px;
+      background-image: url(../img/arrow-left.svg);
     }
   }
 }
@@ -40,9 +80,8 @@
 .ads {
   position: relative;
   max-width: 26.5rem;
-  margin: 0.5rem;
-  margin-top: 2rem;
   width: 100%;
+  margin-bottom: 2rem;
 
   border: 1px solid #cdcdcd;
   border-radius: 3px;
@@ -112,6 +151,32 @@
       font-size: 18px;
       line-height: 22px;
       color: $primary;
+    }
+  }
+}
+
+@media (max-width: 1030px) {
+  .ads {
+    margin-top: 2rem;
+  }
+}
+
+@media (max-width: 670px) {
+  .banner {
+    &__slider {
+      height: 30rem;
+    }
+  }
+}
+
+@media (max-width: 450px) {
+  .banner {
+    &__slider {
+      height: 20rem;
+    }
+
+    &__dots-box {
+      display: none;
     }
   }
 }
