--- a/sass/elements.scss
+++ b/sass/elements.scss
@@ -92,6 +92,7 @@
 }
 
 .card {
+  display: block;
   margin: 0 auto;
 
   position: relative;
@@ -101,11 +102,9 @@
   border: 1px solid #cdcdcd;
   border-radius: 3px;
 
-  // display: flex;
-  // flex-direction: column;
-  // justify-content: space-between;
   align-items: center;
   transition: all 0.3s ease;
+  margin-bottom: 1rem;
   &:hover {
     color: $primary;
   }
@@ -128,7 +127,7 @@
     font-size: 20px;
     line-height: 24px;
     text-align: center;
-
+    pointer-events: none;
     background-color: rgba(#fff, 0.9);
     box-shadow: 0px 0px 15px rgba(0, 0, 0, 0.2);
     border-radius: 3px;
@@ -161,6 +160,8 @@
     position: absolute;
     bottom: 3rem;
     left: 50%;
+    width: 80%;
+    text-align: center;
     transform: translateX(-50%);
     font-weight: bold;
     font-size: 30px;
@@ -265,6 +266,10 @@
     color: #c4c4c4;
     position: relative;
 
+    &:last-child {
+      pointer-events: none;
+    }
+
     &:not(:last-child)::after {
       content: '';
       position: absolute;
@@ -286,6 +291,20 @@
   }
   &__item {
     margin-right: 3rem;
+
+    &--active {
+      position: relative;
+
+      &::after {
+        content: '';
+        position: absolute;
+        top: -4px;
+        left: -8px;
+        width: 2.3rem;
+        height: 2.3rem;
+        border: 1px solid $primary;
+      }
+    }
   }
 }
 .schedule {
