--- a/sass/footer.scss
+++ b/sass/footer.scss
@@ -13,19 +13,23 @@
     line-height: 17px;
     margin-bottom: 3.4rem;
   }
+
+  &__form {
+    display: flex;
+  }
   &__subscribe-input {
     display: inline-block;
     border: none;
-    padding: 8px 12px;
+    padding: 10px 12px;
     background-color: #fff;
     font-size: 14px;
     line-height: 17px;
     max-width: 17rem;
     width: 100%;
+    margin-left: -3px;
   }
   &__subscribe-btn {
     display: inline-block;
-    margin-top: -3px;
     margin-left: -5px;
     padding: 10px 16px;
     border: none;
@@ -77,6 +81,9 @@
       margin: 0 auto;
       text-align: center;
       margin-bottom: 2rem;
+    }
+    &__form {
+      justify-content: center;
     }
 
     &__info {
