--- a/sass/header.scss
+++ b/sass/header.scss
@@ -20,6 +20,23 @@
 
   &__left-item {
     margin-right: 5rem;
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      display: block;
+      top: 3.5rem;
+      // left: 0;
+      height: 3px;
+      width: 0;
+      background-color: $primary;
+      transition: width 0.3s ease-in-out;
+    }
+    &:hover::after {
+      width: 100%;
+      transition: width 0.3s ease-in-out;
+    }
   }
 
   &__logo {
@@ -68,8 +85,22 @@
 
   &__bottom-item {
     padding: 1.5rem 0;
-    &:hover {
-      border-bottom: 2px solid $primary;
+    position: relative;
+
+    &::after {
+      content: '';
+      position: absolute;
+      display: block;
+      top: 4.8rem;
+      // left: 0;
+      height: 2px;
+      width: 0;
+      background-color: $primary;
+      transition: width 0.3s ease-in-out;
+    }
+    &:hover::after {
+      width: 100%;
+      transition: width 0.3s ease-in-out;
     }
   }
 
