--- a/css/style.css
+++ b/css/style.css
@@ -633,6 +633,27 @@ a {
     color: #fff;
     padding: 10px 40px; }
 
+.github {
+  position: fixed;
+  bottom: 16rem;
+  right: 4rem;
+  width: 7rem;
+  height: 7rem;
+  border-radius: 50%;
+  background-image: url(../img/icons/github.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  opacity: 0;
+  transition: all 0.4s cubic-bezier(0.24, 0.81, 0.62, 1.45); }
+  .github--active {
+    opacity: 1;
+    bottom: 6rem; }
+
+@media (max-width: 570px) {
+  .github {
+    display: none; } }
+
 .search {
   margin-bottom: 8rem; }
   @media (max-width: 600px) {
