--- a/sass/elements.scss
+++ b/sass/elements.scss
@@ -365,3 +365,52 @@
     padding: 10px 40px;
   }
 }
+
+.github {
+  position: fixed;
+  bottom: 16rem;
+  right: 4rem;
+  width: 7rem;
+  height: 7rem;
+  border-radius: 50%;
+  background-image: url(../img/icons/github.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
+  opacity: 0;
+  transition: all 0.4s cubic-bezier(0.24, 0.81, 0.62, 1.45);
+
+  &--active {
+    opacity: 1;
+    bottom: 6rem;
+  }
+}
+
+@media (max-width: 570px) {
+  .github {
+    display: none;
+  }
+}
+
+// .readme {
+//   cursor: pointer;
+//   position: fixed;
+//   bottom: 16rem;
+//   left: 4rem;
+//   width: 7rem;
+//   height: 7rem;
+//   // border: none;
+//   border-radius: 50%;
+//   background-color: transparent;
+//   background-image: url(../img/icons/readme.png);
+//   background-repeat: no-repeat;
+//   background-position: center;
+//   background-size: cover;
+//   opacity: 0;
+//   transition: all 0.4s cubic-bezier(0.24, 0.81, 0.62, 1.45);
+
+//   &--active {
+//     opacity: 1;
+//     bottom: 6rem;
+//   }
+// }
